--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -301,6 +301,21 @@ body main section:first-child>div:nth-child(3){
 
 /*--------------------------------------expertise section-------------------------------------------------*/
 
+.web-image {
+    background: url("../images/expertise/christina-wocintechchat-com-5UHFPbvBBzY-unsplash.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+
+section:nth-child(2)>div>div>div:nth-child(1)>div>div:nth-child(1){
+    position: absolute;
+    top: 1vw;
+    left: 0;
+    width: 100%;
+    height: 92%;
+    border-radius: 5px 5px 5px 5px;
+}
 
 section:nth-child(2){
     position: relative;
@@ -375,7 +390,7 @@ section:nth-child(2)>p{
 }
 .content-inner .content-front,
 .content-inner .content-back {
-    color: black;
+    color: #ffffff;
     position: relative;
     transform-style: preserve-3d;
     perspective: 1000px;
@@ -409,7 +424,7 @@ section:nth-child(2)>p{
     position:absolute;
     width: 3vw;
     height: 3vw;
-    border-color: rgb(0, 0, 0);
+    border-color: rgb(255, 255, 255);
     z-index:5;
 }
 
@@ -469,7 +484,7 @@ section:nth-child(2)>p{
     color: #000000;
 }
 .content-back:after  {
-    color: black;
+    color: #ffffff;
     position:absolute;
     content: '\25CF\25CF\25CF';
     width:50px;
@@ -483,7 +498,7 @@ section:nth-child(2)>p{
     position:absolute;
     bottom: -1vw;
     left: 1vw;
-    color: #000000;
+    color: #ffffff;
     font-family: 'Playfair Display', cursive;
     z-index:3;
     font-size:20px;
