--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -302,7 +302,7 @@ body main section:first-child>div:nth-child(3){
 /*--------------------------------------expertise section-------------------------------------------------*/
 
 .web-image {
-    background: url("../images/expertise/christina-wocintechchat-com-5UHFPbvBBzY-unsplash.jpg");
+    background: url("../images/expertise/web design image.png");
     background-position: center;
     background-size: cover;
 }
