--- a/assets/css/Responsive580px/section8.css
+++ b/assets/css/Responsive580px/section8.css
@@ -114,4 +114,20 @@
         width: 100vw;
     }
 
-}
+    .contact-section>div>address>div:nth-child(2)>div:nth-child(1) {
+        top: 22vh;
+        left: 23vw;
+    }
+
+    .contact-section>div>address>div:nth-child(3)>div:nth-child(1) {
+        bottom: -15vh;
+        left: 23vw;
+    }
+
+    .contact-section>div>address>div:nth-child(4)>div:nth-child(1) {
+        bottom: -7vh;
+        left: 23vw;
+    }
+
+
+    }
