--- a/assets/css/Responsive580px/section2.css
+++ b/assets/css/Responsive580px/section2.css
@@ -108,5 +108,11 @@
         height: 10vw;
     }
 
+    section:nth-child(2)>div>div>div:nth-child(1)>div>div:nth-child(1) {
+        top: -12.5vw;
+        height: 139%;
+    }
+
+
 
     }
