--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -156,6 +156,39 @@ svg text {
     }
 }
 
+.wrapp{
+    position: absolute;
+    top: 2vw;
+    width: 36vw;
+    left: 23vw;
+
+}
+
+.svg{
+    font-family: "Russo One", sans-serif;
+    width: 70%; height: 100%;
+}
+.svg text{
+    animation: strok 5s infinite alternate;
+    stroke-width: 2;
+    stroke: #fac921;
+    font-size: 5vw;
+}
+
+@keyframes strok {
+    0%   {
+        fill: rgba(72,138,204,0); stroke: rgb(250, 201, 33);
+        stroke-dashoffset: 25%; stroke-dasharray: 0 50%; stroke-width: 2;
+    }
+    70%  {fill: rgba(72,138,204,0); stroke: rgb(250, 201, 33); }
+    80%  {fill: rgba(72,138,204,0); stroke: rgb(250, 201, 33); stroke-width: 3; }
+    100% {
+        fill: rgb(250, 201, 33); stroke: rgba(54,95,160,0);
+        stroke-dashoffset: -25%; stroke-dasharray: 50% 0; stroke-width: 0;
+    }
+}
+
+
 body main section:first-child>div:nth-child(5)>aside>div:first-child>h1>span{
     color: #fac921;
     font-family: 'Poppins', roboto;
